--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="worldmap.ico">
 </head>
-<body>
+<body bgcolor="8FBC8F">
   <app-root></app-root>
 </body>
 </html>
